# axiom-v1

./: README.md  pyproject.toml
src/: pipeline.py
src/cli/: inspect_axiom.py
src/core/: actions.py  context.py  contracts.py  normalization.py  symbols.py
src/data/: make_jsonl.py
src/formal/: lightweight_verifier.py
src/train/: aops_dataset.py  audit_dataset.py  build_corpus.py  build_sft_pairs.py  prompts.py  sft_train.py
